// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/001.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"001.ent\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/002.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"002.ent\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/003.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"003.ent\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/004.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"004.ent\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/005.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (e*)>{!d!}{!a!},20
characters,<,1
characters,!ELEMENT e EMPTY>{!d!}{!a!},19
characters,<,1
characters,!ENTITY e SYSTEM \\"005.ent\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/006.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA|e)*>{!d!}{!a!},28
characters,<,1
characters,!ELEMENT e EMPTY>{!d!}{!a!},19
characters,<,1
characters,!ENTITY e SYSTEM \\"006.ent\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/007.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"007.ent\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
error,entity not found:&e;
characters,X&e;Z,5
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/008.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"008.ent\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
error,entity not found:&e;
characters,X&e;Z,5
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/009.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"009.ent\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/010.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"010.ent\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/011.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e PUBLIC \\"a not very interesting file\\" \\"011.ent\\">{!d!}{!a!}]>{!d!}{!a!},63
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/012.xml 1`] = `
"startDocument
startDTD,doc
endDTD
error,entity not found:&e2;
characters,!ENTITY e1 \\"&e2;\\">{!d!}{!a!},20
characters,<,1
error,entity not found:&e3;
characters,!ENTITY e2 \\"&e3;\\">{!d!}{!a!},20
characters,<,1
characters,!ENTITY e3 SYSTEM \\"012.ent\\">{!d!}{!a!},30
characters,<,1
error,entity not found:&e5;
characters,!ENTITY e4 \\"&e5;\\">{!d!}{!a!},20
characters,<,1
characters,!ENTITY e5 \\"(e5)\\">{!d!}{!a!},20
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
error,entity not found:&e1;
characters,&e1;,4
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/013.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (e)>{!d!}{!a!},19
characters,<,1
characters,!ELEMENT e (#PCDATA)>{!d!}{!a!},23
characters,<,1
characters,!ATTLIST e{!d!}{!a!}  a1 CDATA \\"a1 default\\"{!d!}{!a!}  a2 NMTOKENS \\"a2 default\\"{!d!}{!a!}>{!d!}{!a!},68
characters,<,1
characters,!ENTITY x SYSTEM \\"013.ent\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
error,entity not found:&x;
characters,&x;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/014.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"014.ent\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/001.xml 1`] = `
"startDocument
startDTD,doc,001.ent
endDTD
characters,!ELEMENT doc EMPTY>{!d!}{!a!}]>{!d!}{!a!},25
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/002.xml 1`] = `
"startDocument
startDTD,doc,002.ent
endDTD
characters,!ELEMENT doc EMPTY>{!d!}{!a!}]>{!d!}{!a!},25
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/003.xml 1`] = `
"startDocument
startDTD,doc,003-1.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/004.xml 1`] = `
"startDocument
startDTD,doc,004-1.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/005.xml 1`] = `
"startDocument
startDTD,doc,005-1.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/006.xml 1`] = `
"startDocument
startDTD,doc,006.ent
endDTD
characters,!ATTLIST doc a1 CDATA \\"v1\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/007.xml 1`] = `
"startDocument
startDTD,doc,007.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/008.xml 1`] = `
"startDocument
startDTD,doc,whatever,008.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/009.xml 1`] = `
"startDocument
startDTD,doc,whatever,009.ent
endDTD
characters,!ATTLIST doc a2 CDATA \\"v2\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/010.xml 1`] = `
"startDocument
startDTD,doc,010.ent
endDTD
characters,!ATTLIST doc a1 CDATA \\"v1\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/011.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY % e SYSTEM \\"011.ent\\">{!d!}{!a!}%e;{!d!}{!a!}]>{!d!}{!a!},40
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/012.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY % e SYSTEM \\"012.ent\\">{!d!}{!a!}%e;{!d!}{!a!}]>{!d!}{!a!},40
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/013.xml 1`] = `
"startDocument
startDTD,doc,013.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/014.xml 1`] = `
"startDocument
startDTD,doc,014.ent
endDTD
characters,!ENTITY % e \\"INCLUDE\\">{!d!}{!a!}]>{!d!}{!a!},28
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/015.xml 1`] = `
"startDocument
startDTD,doc,015.ent
endDTD
characters,!ENTITY % e \\"IGNORE\\">{!d!}{!a!}]>{!d!}{!a!},27
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/016.xml 1`] = `
"startDocument
startDTD,doc,016.ent
endDTD
characters,!ENTITY % e \\"INCLUDE\\">{!d!}{!a!}]>{!d!}{!a!},28
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/017.xml 1`] = `
"startDocument
startDTD,doc,017.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/018.xml 1`] = `
"startDocument
startDTD,doc,018.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/019.xml 1`] = `
"startDocument
startDTD,doc,019.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/020.xml 1`] = `
"startDocument
startDTD,doc,020.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/021.xml 1`] = `
"startDocument
startDTD,doc,021.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/022.xml 1`] = `
"startDocument
startDTD,doc,022.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/023.xml 1`] = `
"startDocument
startDTD,doc,023.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/024.xml 1`] = `
"startDocument
startDTD,doc,024.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/025.xml 1`] = `
"startDocument
startDTD,doc,025.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/026.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc ANY>{!d!}{!a!},19
characters,<,1
characters,!ENTITY % e SYSTEM \\"026.ent\\">{!d!}{!a!}%e;{!d!}{!a!},36
characters,<,1
characters,!ATTLIST doc a1 CDATA \\"x1\\" a2 CDATA \\"x2\\">{!d!}{!a!}]>{!d!}{!a!},47
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/027.xml 1`] = `
"startDocument
startDTD,doc,027.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/028.xml 1`] = `
"startDocument
startDTD,doc,028.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/029.xml 1`] = `
"startDocument
startDTD,doc,029.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/030.xml 1`] = `
"startDocument
startDTD,doc,030.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/031.xml 1`] = `
"startDocument
startDTD,doc,031-1.ent
endDTD
characters,{!d!}{!a!},2
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/001.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/002.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/003.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/004.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},37
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/005.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},37
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/006.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},37
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/007.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
characters, ,5
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/008.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
error,entity not found:&amp;
error,entity not found:&lt;
error,entity not found:&gt;
error,entity not found:&quot;
error,entity not found:&apos;
characters,&amp;&lt;&gt;&quot;&apos;,25
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/009.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
characters, ,6
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/010.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},37
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/011.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED a2 CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},55
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/012.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc : CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},36
error,element parse error: Error: invalid attribute::
characters,<,1
characters,doc :=\\"v1\\">,11
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/013.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc _.-0123456789 CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},48
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/014.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc abcdefghijklmnopqrstuvwxyz CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},61
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/015.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc ABCDEFGHIJKLMNOPQRSTUVWXYZ CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},61
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/016.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
processingInstruction,pi
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/017.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
processingInstruction,pi,some data ? > <?
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/018.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
startCDATA
characters,<!DOCTYPE doc [{!d!}{!a!}<!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!}<doc><![CDATA[<foo>]]></doc>{!d!}{!a!},61,5
endCDATA
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/019.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
startCDATA
characters,<!DOCTYPE doc [{!d!}{!a!}<!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!}<doc><![CDATA[<&]]></doc>{!d!}{!a!},61,2
endCDATA
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/020.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
startCDATA
characters,<!DOCTYPE doc [{!d!}{!a!}<!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!}<doc><![CDATA[<&]>]]]></doc>{!d!}{!a!},61,5
endCDATA
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/021.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
comment,<!DOCTYPE doc [{!d!}{!a!}<!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!}<doc><!-- a comment --></doc>{!d!}{!a!},56,11
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/022.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
comment,<!DOCTYPE doc [{!d!}{!a!}<!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!}<doc><!-- a comment ->--></doc>{!d!}{!a!},56,13
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/023.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e \\"\\">{!d!}{!a!}]>{!d!}{!a!},19
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/024.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (foo)>{!d!}{!a!},21
characters,<,1
characters,!ELEMENT foo (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e \\"<foo>,20
characters,\\">{!d!}{!a!}]>{!d!}{!a!},8
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/025.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (foo*)>{!d!}{!a!},22
characters,<,1
characters,!ELEMENT foo (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
startElement,foo,foo
endElement,foo,foo
startElement,foo,foo
endElement,foo,foo
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/026.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (foo*)>{!d!}{!a!},22
characters,<,1
characters,!ELEMENT foo EMPTY>{!d!}{!a!}]>{!d!}{!a!},25
startElement,doc,doc
startElement,foo,foo
endElement,foo,foo
startElement,foo,foo
endElement,foo,foo
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/027.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (foo*)>{!d!}{!a!},22
characters,<,1
characters,!ELEMENT foo ANY>{!d!}{!a!}]>{!d!}{!a!},23
startElement,doc,doc
startElement,foo,foo
endElement,foo,foo
startElement,foo,foo
endElement,foo,foo
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/028.xml 1`] = `
"startDocument
processingInstruction,xml,version=\\"1.0\\"
characters,{!d!}{!a!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/029.xml 1`] = `
"startDocument
processingInstruction,xml,version='1.0'
characters,{!d!}{!a!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/030.xml 1`] = `
"startDocument
processingInstruction,xml,version = \\"1.0\\"
characters,{!d!}{!a!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/031.xml 1`] = `
"startDocument
processingInstruction,xml,version='1.0' encoding=\\"UTF-8\\"
characters,{!d!}{!a!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/032.xml 1`] = `
"startDocument
processingInstruction,xml,version='1.0' standalone='yes'
characters,{!d!}{!a!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/033.xml 1`] = `
"startDocument
processingInstruction,xml,version='1.0' encoding=\\"UTF-8\\" standalone='yes'
characters,{!d!}{!a!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/034.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/035.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/036.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
characters,{!d!}{!a!},2
processingInstruction,pi,data
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/037.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
characters,{!d!}{!a!},2
comment,<!DOCTYPE doc [{!d!}{!a!}<!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!}<doc></doc>{!d!}{!a!}<!-- comment -->{!d!}{!a!}{!d!}{!a!},64,9
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/038.xml 1`] = `
"startDocument
comment,<!-- comment -->{!d!}{!a!}<!DOCTYPE doc [{!d!}{!a!}<!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!}<doc></doc>{!d!}{!a!}{!d!}{!a!},4,9
characters,{!d!}{!a!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/039.xml 1`] = `
"startDocument
processingInstruction,pi,data
characters,{!d!}{!a!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/040.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},37
error,entity not found:&quot;
error,entity not found:&lt;
error,entity not found:&amp;
error,entity not found:&gt;
error,entity not found:&apos;
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/041.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},37
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/042.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
characters,A,38
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/043.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!d!}{!a!},33
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/044.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (e*)>{!d!}{!a!},20
characters,<,1
characters,!ELEMENT e EMPTY>{!d!}{!a!},19
characters,<,1
characters,!ATTLIST e a1 CDATA \\"v1\\" a2 CDATA \\"v2\\" a3 CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},63
startElement,doc,doc
characters,{!d!}{!a!},2
startElement,e,e
endElement,e,e
characters,{!d!}{!a!},2
startElement,e,e
endElement,e,e
characters,{!d!}{!a!},2
startElement,e,e
endElement,e,e
characters,{!d!}{!a!},2
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/045.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA \\"v1\\">{!d!}{!a!},29
characters,<,1
characters,!ATTLIST doc a1 CDATA \\"z1\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/046.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA \\"v1\\">{!d!}{!a!},29
characters,<,1
characters,!ATTLIST doc a2 CDATA \\"v2\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/047.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
characters,X{!d!}{!a!}Y,4
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/048.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
characters,],1
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/049.xml 1`] = `
"startDocument
characters,��,2
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}!{!0!}D{!0!}O{!0!}C{!0!}T{!0!}Y{!0!}P{!0!}E{!0!} {!0!}d{!0!}o{!0!}c{!0!} {!0!}[{!0!}{!d!}{!0!}{!a!}{!0!},33
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}!{!0!}E{!0!}L{!0!}E{!0!}M{!0!}E{!0!}N{!0!}T{!0!} {!0!}d{!0!}o{!0!}c{!0!} {!0!}({!0!}#{!0!}P{!0!}C{!0!}D{!0!}A{!0!}T{!0!}A{!0!}){!0!}>{!0!}{!d!}{!0!}{!a!}{!0!}]{!0!}>{!0!}{!d!}{!0!}{!a!}{!0!},59
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}d{!0!}o{!0!}c{!0!}>{!0!}�{!0!},11
error,element parse error: Error: invalid tagName:
characters,<,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,/,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,d,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,o,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,c,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,>,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!d!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!a!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/050.xml 1`] = `
"startDocument
characters,��,2
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}!{!0!}D{!0!}O{!0!}C{!0!}T{!0!}Y{!0!}P{!0!}E{!0!} {!0!}d{!0!}o{!0!}c{!0!} {!0!}[{!0!}{!d!}{!0!}{!a!}{!0!},33
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}!{!0!}E{!0!}L{!0!}E{!0!}M{!0!}E{!0!}N{!0!}T{!0!} {!0!}d{!0!}o{!0!}c{!0!} {!0!}({!0!}#{!0!}P{!0!}C{!0!}D{!0!}A{!0!}T{!0!}A{!0!}){!0!}>{!0!}{!d!}{!0!}{!a!}{!0!}]{!0!}>{!0!}{!d!}{!0!}{!a!}{!0!},59
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}d{!0!}o{!0!}c{!0!}>{!0!}@!*L,19
error,element parse error: Error: invalid tagName:
characters,<,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,/,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,d,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,o,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,c,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,>,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!d!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!a!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/051.xml 1`] = `
"startDocument
characters,��,2
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}!{!0!}D{!0!}O{!0!}C{!0!}T{!0!}Y{!0!}P{!0!}E{!0!} {!0!}@!*L {!0!}[{!0!}{!d!}{!0!}{!a!}{!0!},37
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}!{!0!}E{!0!}L{!0!}E{!0!}M{!0!}E{!0!}N{!0!}T{!0!} {!0!}@!*L {!0!} {!0!}({!0!}#{!0!}P{!0!}C{!0!}D{!0!}A{!0!}T{!0!}A{!0!}){!0!}>{!0!}{!d!}{!0!}{!a!}{!0!}]{!0!}>{!0!}{!d!}{!0!}{!a!}{!0!},65
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}@!*L>{!0!},13
error,element parse error: Error: invalid tagName:
characters,<,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,/,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,@,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,!,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,*,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,L,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,>,1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!d!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!a!},1
error,element parse error: TypeError: Cannot read property 'createTextNode' of undefined
characters,{!0!},1
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/052.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
characters,𐀀􏿽,4
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/053.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY e \\",11
startElement,e,e
endElement,e,e
characters,\\">{!d!}{!a!},4
characters,<,1
characters,!ELEMENT doc (e)>{!d!}{!a!},19
characters,<,1
characters,!ELEMENT e EMPTY>{!d!}{!a!}]>{!d!}{!a!},23
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/054.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!}{!d!}{!a!}{!d!}{!a!},33
startElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/055.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
processingInstruction,pi,data
characters,{!d!}{!a!},2
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/056.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
characters,A,44
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/057.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (a*)>{!d!}{!a!}]>{!d!}{!a!},24
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/058.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ATTLIST doc a1 NMTOKENS #IMPLIED>{!d!}{!a!},36
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/059.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (e*)>{!d!}{!a!},20
characters,<,1
characters,!ELEMENT e EMPTY>{!d!}{!a!},19
characters,<,1
characters,!ATTLIST e a1 CDATA #IMPLIED a2 CDATA #IMPLIED a3 CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},71
startElement,doc,doc
characters,{!d!}{!a!},2
startElement,e,e
endElement,e,e
characters,{!d!}{!a!},2
startElement,e,e
endElement,e,e
characters,{!d!}{!a!},2
startElement,e,e
endElement,e,e
characters,{!d!}{!a!},2
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/060.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
characters,X{!a!}Y,7
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/061.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
characters,£,6
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/062.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
characters,เจมส์,23
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/063.xml 1`] = `
"startDocument
startDTD,เจมส์
endDTD
characters,!ELEMENT เจมส์ (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},31
startElement,เจมส์,เจมส์
endElement,เจมส์,เจมส์
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/064.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
characters,𐀀􏿽,19
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/065.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY e \\"<\\">{!d!}{!a!},20
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/066.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!d!}{!a!},33
comment,<!DOCTYPE doc [{!d!}{!a!}<!ELEMENT doc (#PCDATA)>{!d!}{!a!}<!ATTLIST doc a1 CDATA #IMPLIED>{!d!}{!a!}<!-- 34 is double quote -->{!d!}{!a!}<!ENTITY e1 \\"&#34;\\">{!d!}{!a!}]>{!d!}{!a!}<doc a1=\\"&e1;\\"></doc>{!d!}{!a!},81,20
characters,{!d!}{!a!},2
characters,<,1
characters,!ENTITY e1 \\"\\"\\">{!d!}{!a!}]>{!d!}{!a!},25
error,entity not found:&e1;
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/067.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
characters,{!d!},5
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/068.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e \\"{!d!}\\">{!d!}{!a!}]>{!d!}{!a!},24
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/069.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!NOTATION n PUBLIC \\"whatever\\">{!d!}{!a!}]>{!d!}{!a!},36
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/070.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY % e \\",13
characters,<,1
characters,!ELEMENT doc (#PCDATA)>\\">{!d!}{!a!}%e;{!d!}{!a!}]>{!d!}{!a!},36
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/071.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a ID #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/072.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a IDREF #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},36
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/073.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a IDREFS #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},37
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/074.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a ENTITY #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},37
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/075.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a ENTITIES #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},39
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/076.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a NOTATION (n1|n2) #IMPLIED>{!d!}{!a!},43
characters,<,1
characters,!NOTATION n1 SYSTEM \\"http://www.w3.org/\\">{!d!}{!a!},43
characters,<,1
characters,!NOTATION n2 SYSTEM \\"http://www.w3.org/\\">{!d!}{!a!}]>{!d!}{!a!},47
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/077.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a (1|2) #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},36
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/078.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a CDATA #REQUIRED>{!d!}{!a!}]>{!d!}{!a!},37
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/079.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a CDATA #FIXED \\"v\\">{!d!}{!a!}]>{!d!}{!a!},38
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/080.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a CDATA #FIXED \\"v\\">{!d!}{!a!}]>{!d!}{!a!},38
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/081.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (a, b, c)>{!d!}{!a!},25
characters,<,1
characters,!ELEMENT a (a?)>{!d!}{!a!},18
characters,<,1
characters,!ELEMENT b (b*)>{!d!}{!a!},18
characters,<,1
characters,!ELEMENT c (a | b)+>{!d!}{!a!}]>{!d!}{!a!},26
startElement,doc,doc
startElement,a,a
endElement,a,a
startElement,b,b
endElement,b,b
startElement,c,c
startElement,a,a
endElement,a,a
endElement,c,c
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/082.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY % e SYSTEM \\"e.dtd\\">{!d!}{!a!},29
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/083.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY % e PUBLIC 'whatever' \\"e.dtd\\">{!d!}{!a!},40
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/084.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>]>,25
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/085.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY % e \\",13
warning,unclosed xml attribute
startElement,foo,foo
endElement,foo,foo
characters,\\">{!d!}{!a!},4
characters,<,1
characters,!ENTITY e \\"\\">{!d!}{!a!}]>{!d!}{!a!},19
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/086.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e \\"\\">{!d!}{!a!},15
characters,<,1
characters,!ENTITY e \\",11
warning,unclosed xml attribute
startElement,foo,foo
endElement,foo,foo
characters,\\">{!d!}{!a!}]>{!d!}{!a!},8
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/087.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY e \\",11
error,element parse error: Error: elements closed character '/' and '>' must be connected to
characters,<,1
characters,foo/>\\">{!d!}{!a!},13
characters,<,1
characters,!ELEMENT doc (foo)>{!d!}{!a!},21
characters,<,1
characters,!ELEMENT foo EMPTY>{!d!}{!a!}]>{!d!}{!a!},25
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/088.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
error,entity not found:&lt;
characters,!ENTITY e \\"&lt;foo>\\">{!d!}{!a!}]>{!d!}{!a!},27
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/089.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY e \\"𐀀􏿽􏿿\\">{!d!}{!a!},44
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/090.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ATTLIST e a NOTATION (n) #IMPLIED>{!d!}{!a!},37
characters,<,1
characters,!ELEMENT doc (e)*>{!d!}{!a!},20
characters,<,1
characters,!ELEMENT e (#PCDATA)>{!d!}{!a!},23
characters,<,1
characters,!NOTATION n PUBLIC \\"whatever\\">{!d!}{!a!}]>{!d!}{!a!},36
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/091.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!NOTATION n SYSTEM \\"http://www.w3.org/\\">{!d!}{!a!},42
characters,<,1
characters,!ENTITY e SYSTEM \\"http://www.w3.org/\\" NDATA n>{!d!}{!a!},48
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a ENTITY \\"e\\">{!d!}{!a!}]>{!d!}{!a!},32
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/092.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (a)*>{!d!}{!a!},20
characters,<,1
characters,!ELEMENT a EMPTY>{!d!}{!a!}]>{!d!}{!a!},23
startElement,doc,doc
characters,{!d!}{!a!},2
startElement,a,a
endElement,a,a
characters,{!d!}{!a!}    ,6
startElement,a,a
endElement,a,a
characters,	,1
startElement,a,a
endElement,a,a
characters,{!d!}{!a!}{!d!}{!a!}{!d!}{!a!},6
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/093.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!a!}]>{!a!},27
startElement,doc,doc
characters,{!d!}{!a!}{!d!}{!d!},4
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/094.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY % e \\"foo\\">{!d!}{!a!},20
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA \\"%e;\\">{!d!}{!a!}]>{!d!}{!a!},34
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/095.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!d!}{!a!},33
characters,<,1
characters,!ATTLIST doc a1 NMTOKENS #IMPLIED>{!d!}{!a!},36
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/096.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ATTLIST doc a1 NMTOKENS \\" 1  	2 	\\">{!d!}{!a!},38
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/097.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY % e SYSTEM \\"097.ent\\">{!d!}{!a!},31
characters,<,1
characters,!ATTLIST doc a1 CDATA \\"v1\\">{!d!}{!a!}%e;{!d!}{!a!},34
characters,<,1
characters,!ATTLIST doc a2 CDATA \\"v2\\">{!d!}{!a!}]>{!d!}{!a!},33
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/098.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
processingInstruction,pi,x{!d!}{!a!}y
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/099.xml 1`] = `
"startDocument
processingInstruction,xml,version=\\"1.0\\" encoding=\\"utf-8\\"
characters,{!d!}{!a!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/100.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY e PUBLIC \\";!*#@$_%\\" \\"100.xml\\">{!d!}{!a!},40
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/101.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e \\"\\"\\">{!d!}{!a!}]>{!d!}{!a!},24
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/102.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},36
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/103.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
characters,<doc>,9
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/104.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},36
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/105.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},36
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/106.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},36
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/107.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},36
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/108.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e \\"{!d!}{!a!}\\">{!d!}{!a!},17
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},36
error,entity not found:&e;
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/109.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},36
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/110.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e \\"{!d!}{!a!}\\">{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},36
error,entity not found:&e;
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/111.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST doc a NMTOKENS #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},39
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/112.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (a | b)>{!d!}{!a!},23
characters,<,1
characters,!ELEMENT a (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},27
startElement,doc,doc
startElement,a,a
endElement,a,a
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/113.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ATTLIST e a CDATA #IMPLIED>{!d!}{!a!}]>{!d!}{!a!},34
startElement,doc,doc
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/114.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY e \\",11
startCDATA
characters,<!DOCTYPE doc [{!d!}{!a!}<!ELEMENT doc (#PCDATA)>{!d!}{!a!}<!ENTITY e \\"<![CDATA[&foo;]]>\\">{!d!}{!a!}]>{!d!}{!a!}<doc>&e;</doc>{!d!}{!a!},64,5
endCDATA
characters,\\">{!d!}{!a!}]>{!d!}{!a!},8
startElement,doc,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/115.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
error,entity not found:&e2;
characters,!ENTITY e1 \\"&e2;\\">{!d!}{!a!},20
characters,<,1
characters,!ENTITY e2 \\"v\\">{!d!}{!a!}]>{!d!}{!a!},21
startElement,doc,doc
error,entity not found:&e1;
characters,&e1;,4
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/116.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!},29
startElement,doc,doc
startCDATA
characters,<!DOCTYPE doc [{!d!}{!a!}<!ELEMENT doc (#PCDATA)>{!d!}{!a!}]>{!d!}{!a!}<doc><![CDATA[{!d!}{!a!}]]></doc>{!d!}{!a!},61,2
endCDATA
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/117.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY rsqb \\"]\\">{!d!}{!a!}]>{!d!}{!a!},23
startElement,doc,doc
error,entity not found:&rsqb;
characters,&rsqb;,6
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/118.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!d!}{!a!},25
characters,<,1
characters,!ENTITY rsqb \\"]]\\">{!d!}{!a!}]>{!d!}{!a!},24
startElement,doc,doc
error,entity not found:&rsqb;
characters,&rsqb;,6
endElement,doc,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/119.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc ANY>{!d!}{!a!}]>{!d!}{!a!},23
startElement,doc,doc
comment,<!DOCTYPE doc [{!d!}{!a!}<!ELEMENT doc ANY>{!d!}{!a!}]>{!d!}{!a!}<doc><!-- -á --></doc>{!d!}{!a!},50,4
endElement,doc,doc
endDocument"
`;
